# config-files

./: .ansible-lint  .editorconfig  .envrc  .gitattributes  .gitignore  .mdlstyle.rb  .pre-commit-config.yaml  .travis.yml  .yamllint  CODEOWNERS  DEVELOPMENT.md  INSTALL.md  LICENSE.md  PROXY.md  README.md  ansible.cfg  config-files  custom-keybindings.dconf  dev-requirements.in  dev-requirements.txt  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt  requirements.yml  run-ansible.py  setup.bash  setup.py
.github/: CODEOWNERS  baumpfleger.yml  dependabot.yml  molecule-critical-roles.txt
.github/workflows/: ci.yml  main.yml  shellcheck.yml  tests.yaml  tests.yml
atom/: packages.cson
config_files/: main.py
deprecated/git/: gitconfig-cygwin
deprecated/scripts/: README.md  ssh-key-permissions.sh
git/: .git_commit_message.txt  .gitconfig-common  .gitconfig-linux  .gitconfig-osx
molecule/default/: molecule.yml
oh-my-zsh/: .zshrc
oh-my-zsh/.oh-my-zsh/themes/: baboom.zsh-theme
playbooks/: developer.yml  helloworld.yml  inventory.yml  social.yml  wsl.yml
roles/apt_add_repo/tasks/: main.yaml
roles/apt_update/tasks/: main.yml
roles/atom/defaults/: main.yml
roles/atom/files/: packages.cson
roles/atom/tasks/: copy_extensions.yml  main.yml  os_Darwin.yml  os_Debian.yml
roles/atuin/files/: config.toml
roles/atuin/tasks/: main.yml
roles/bat/tasks/: main.yml  os_Darwin.yml  os_Debian.yml
roles/bitwarden/tasks/: main.yml
roles/brew/tasks/: main.yml
roles/bruno/tasks/: main.yml
roles/dconf/tasks/: main.yml
roles/debug/tasks/: main.yml
roles/delta/defaults/: main.yml
roles/delta/tasks/: main.yml  os_Debian.yml
roles/direnv/tasks/: main.yml
roles/discord/tasks/: main.yml
roles/docker/tasks/: main.yml  os_Darwin.yml  os_Debian.yml
roles/ensure-apps/tasks/: main.yml  os_Darwin.yml  os_Debian.yml
roles/ensure_apps/tasks/: brew_install.yml  main.yml  os_Darwin.yml  os_Debian.yml
roles/exa/tasks/: main.yml  os_Darwin.yml  os_Debian.yml
roles/eza/tasks/: main.yml
roles/flameshot/tasks/: main.yml  os_Debian.yml
roles/flameshot/templates/: flameshot.ini.j2
roles/gh/tasks/: main.yml
roles/gifgen/tasks/: main.yml
roles/git/defaults/: main.yml
roles/git/files/: gitconfig  gitconfig-Darwin  gitconfig-Debian  gitconfig-common  gitconfig-windows
roles/git/tasks/: main.yml  os_Darwin.yml  os_Debian.yml
roles/git_xargs/tasks/: main.yml
roles/gogh/tasks/: main.yml
roles/hadolint/tasks/: main.yml
roles/helm/tasks/: main.yml
roles/i3/: README.md
roles/i3/files/: profile_i3_block  xinitrc
roles/i3/tasks/: main.yml  os_Debian.yml
roles/i3/templates/: flameshot.ini.j2
roles/jetbrains-ide/defaults/: main.yml
roles/jetbrains-ide/tasks/: main.yml  os_Debian.yml
roles/ranger/: README.md
scripts/: ssh-key-add.sh  ssh-key-permissions.sh  test-changed-roles.sh  test-roles.py  test-roles.sh
src/config_files/: config_files.py  config_files_molecule.py
vim/: .vimrc
vscode/: extensions.txt
(+154 files in other folders)
