[project]
name = "config-files"
version = "0.1.0"
description = "config-files"
readme = "README.md"
authors = [{ name = "cmuck", email = "cmuckmuck@gmail.com" }]
license = { file = "LICENSE.md" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
keywords = ["dotfiles"]

requires-python = ">= 3.12"

dependencies = [
    "ansible",
    "jmespath",
]

[dependency-groups]
dev = [
    "ansible-lint",
    "docker",
    "mdformat",
    "molecule-docker",
    "molecule",
    "mypy",
    "ruff",
    "pre-commit",
    "tomlcheck",
    "yamllint",
]

[project.urls]
Homepage = "https://github.com/cmuck/config-files"

[project.scripts]
cf = "config_files.main:main"

[tool.pytest.ini_options]
minversion = 7.0
pythonpath = ["src"]

[tool.uv]
package = true
