[project]
name = "config-files"
version = "0.1.0"
description = "config-files"
readme = "README.md"
authors = [{ name = "cmuck", email = "cmuckmuck@gmail.com" }]
license = { file = "LICENSE.md" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
keywords = ["dotfiles"]

requires-python = ">= 3.12"

dependencies = [
    "ansible>=11.1.0",
    "jmespath>=1.0.1",
]

[dependency-groups]
dev = [
    "ansible-lint>=6.8.7",
    "docker>=7.1.0",
    "mdformat>=0.7.19",
    "molecule>=24.12.0",
    "molecule-docker>=2.1.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "pyright>=1.1.403",
    "pyupgrade>=3.20.0",
    "ruff>=0.8.2",
    "shellcheck-py>=0.11.0.1",
    "tomlcheck>=0.2.3",
    "yamllint>=1.35.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/cmuck/config-files"

[project.scripts]
cf = "config_files.config_files:main"
cf-molecule = "config_files.config_files_molecule:main"

[tool.uv]
package = true
environments = ["platform_system != 'Windows'"]
